--- a/pages/software.html
+++ b/pages/software.html
@@ -106,118 +106,218 @@
 
     <!-- Contenedor principal-->
     <div class="container p-3" id="container">
-        <div class="container p-3" id="container">
-            <nav class="mt-5">
-                <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                    <a class="nav-link active" id="nav-desktop-tab" data-bs-toggle="tab" href="#nav-desktop" role="tab"
-                        aria-controls="nav-desktop" aria-selected="true">ATS 1040 Desktop</a>
+        <nav class="mt-5">
+            <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+                <a class="nav-link font-weight-bold tab-name active" id="nav-desktop-tab" data-bs-toggle="tab"
+                    href="#nav-desktop" role="tab" aria-controls="nav-desktop" aria-selected="true">ATS 1040
+                    Desktop</a>
 
-                    <a class="nav-link" id="nav-online-tab" data-bs-toggle="tab" href="#nav-online" role="tab"
-                        aria-controls="nav-online" aria-selected="false">ATS 1040 Online</a>
+                <a class="nav-link font-weight-bold tab-name" id="nav-online-tab" data-bs-toggle="tab"
+                    href="#nav-online" role="tab" aria-controls="nav-online" aria-selected="false">ATS 1040
+                    Online</a>
 
-                    <a class="nav-link" id="nav-corp-tab" data-bs-toggle="tab" href="#nav-corp" role="tab"
-                        aria-controls="nav-corp" aria-selected="false">ATS Corpotations</a>
+                <a class="nav-link font-weight-bold tab-name" id="nav-corp-tab" data-bs-toggle="tab" href="#nav-corp"
+                    role="tab" aria-controls="nav-corp" aria-selected="false">ATS Corpotations</a>
 
-                    <a class="nav-link" id="nav-partner-tab" data-bs-toggle="tab" href="#nav-partner" role="tab"
-                        aria-controls="nav-partner" aria-selected="false">ATS Partners</a>
-                </div>
-            </nav>
+                <a class="nav-link font-weight-bold tab-name" id="nav-partner-tab" data-bs-toggle="tab"
+                    href="#nav-partner" role="tab" aria-controls="nav-partner" aria-selected="false">ATS
+                    Partners</a>
+            </div>
+        </nav>
 
-            <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="nav-desktop" role="tabpanel"
-                    aria-labelledby="nav-desktop-tab" tabindex="0">
-                    <div class="row">
-                        <div class="col-12">
-                            <img src="../rsc/banners_prods/ATS 1040 Desktop.jpg" class="img-fluid" width="100%" />
-                        </div>
-                    </div>
-                    <div class="row m-0 p-3" id="content-desktop">
-
-                    </div>
-
-                </div>
-
-                <div class="tab-pane fade" id="nav-online" role="tabpanel" aria-labelledby="nav-online-tab"
-                    tabindex="0">
-                    <div class="row">
-                        <div class="col-12">
-                            <img src="../rsc/banners_prods/ATS 1040 Online.jpg" class="img-fluid" width="100%" />
-                        </div>
-                        <div class="row m-0 p-3" id="content-online">
-
-                        </div>
-
+        <div class="tab-content mb-5" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-desktop" role="tabpanel" aria-labelledby="nav-desktop-tab"
+                tabindex="0">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="../rsc/banners_prods/ATS 1040 Desktop.jpg" class="img-fluid" width="100%" />
                     </div>
                 </div>
-                <div class="tab-pane fade" id="nav-corp" role="tabpanel" aria-labelledby="nav-corp-tab" tabindex="0">
-                    <div class="row">
-                        <div class="col-12">
-                            <img src="../rsc/banners_prods/ATS Corporations.jpg" class="img-fluid" width="100%" />
+                <div class="row m-0 p-3" id="content-desktop">
+
+                </div>
+                <div class="row m-0 pb-5 justify-content-center">
+                    <div class="col-5">
+                        <a href="../pages/contact.html" class="btn btn-primary btn-lg mt-5 w-100" tabindex="-1"
+                            role="button">
+                            <b>CONTACT US!</b>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane fade" id="nav-online" role="tabpanel" aria-labelledby="nav-online-tab" tabindex="0">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="../rsc/banners_prods/ATS 1040 Online.jpg" class="img-fluid" width="100%" />
+                    </div>
+                    <div class="row m-0 p-3" id="content-online">
+
+                    </div>
+                    <div class="row m-0 pb-5 justify-content-center">
+                        <div class="col-5">
+                            <a href="../pages/contact.html" class="btn btn-primary btn-lg mt-5 w-100" tabindex="-1"
+                                role="button">
+                                <b>CONTACT US!</b>
+                            </a>
                         </div>
-                        <div class="row m-0 p-3" id="content-corp">
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane fade" id="nav-corp" role="tabpanel" aria-labelledby="nav-corp-tab" tabindex="0">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="../rsc/banners_prods/ATS Corporations.jpg" class="img-fluid" width="100%" />
+                    </div>
+                    <div class="row m-0 p-3" id="content-corp">
+
+                    </div>
+                    <div class="row m-0 pb-5 justify-content-center">
+                        <div class="col-5">
+                            <a href="../pages/contact.html" class="btn btn-primary btn-lg mt-5 w-100" tabindex="-1"
+                                role="button">
+                                <b>CONTACT US!</b>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-pane fade" id="nav-partner" role="tabpanel" aria-labelledby="nav-partner-tab" tabindex="0">
+                <div class="row m-0 p-5 justify-content-center">
+                    <h1 class="text-center" style="color:black">ATS Partners</h1>
+                    <p>
+                        Our Partnership Packages are designed for tax preparers who have not obtained their own
+                        EFIN. If you are new to the tax business or looking to branch off and start your own tax
+                        business this is a great package to start with. We offer 60/40, 70/30, 80/20 and 90/10
+                        splits in favor of the partner with no EFIN required. Many of our current partners are
+                        former employees of H&R Block, Jackson Hewitt, Liberty Tax, and smaller tax companies
+                        looking to start their own tax preparation business.
+                    </p>
+                    <h2>PARTNERSHIP PACKAGES </h2>
+                </div>
+                <div class="row m-0 text-center justify-content-around">
+
+                    <div class="col-3 cuadro rounded" data-aos="flip-left">
+                        <div class="row green p-2 text-center rounded-top">
+                            <div class="col-12">
+                                <p>STARTER PACKAGE <br />(70% / 30% )</p>
+                                <h2><b>$495</b></h2>
+                            </div>
+                        </div>
+                        <div class="row px-3 pt-3">
+                            <b>Buy ATS Software 2020 and get 2019 FREE.</b><br /> Start Your Own Tax Preparation
+                            Business TODAY!
+                            Revenue Split 70% / 30%
+                            <br />
+                            PTIN Required
+                        </div>
+                        <div class="row p-4 text-left">
+                            <ul>
+                                <li><span class="text-success">✓</span> No EFIN Required</li>
+                                <li><span class="text-success">✓</span> No experience required</li>
+                                <li><span class="text-success">✓</span> Up to 3 prior year access</li>
+                                <li><span class="text-success">✓</span> All States included</li>
+                                <li><span class="text-success">✓</span> Unlimited returns</li>
+                                <li><span class="text-success">✓</span> Customizable reports</li>
+                                <li><span class="text-success">✓</span> Tax Software training</li>
+                                <li><span class="text-success">✓</span> Unlimited users</li>
+                                <li><span class="text-success">✓</span> Tax & Tech Support 12/7</li>
+                                <hr />
+                                <p><b>We will guide you to the process</b></p>
+
+                                <li><span class="text-success">✓</span> Getting your PTIN license</li>
+                                <li><span class="text-success">✓</span> CTEC and Bond</li>
+                                <li><span class="text-success">✓</span> Bank Enrollment</li>
+                                <li><span class="text-success">✓</span> e-File Transmition</li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                    <div class="col-3 cuadro rounded" data-aos="flip-left">
+                        <div class="row red p-2 text-center rounded-top">
+                            <div class="col-12">
+                                <p> ADVANCED PACKAGE <br />(80% / 20% )</p>
+                                <h2><b>$795</b></h2>
+                            </div>
+                        </div>
+
+                        <div class="row px-3 pt-3">
+                            <b>Buy ATS Software 2020 and get 2019 FREE.</b><br /> Start Your Own Tax Preparation
+                            Business TODAY!
+                            Revenue Split 70% / 30%
+                            <br />
+                            PTIN Required
+                        </div>
+                        <div class="row p-4 text-left">
+                            <ul>
+                                <li><span class="text-success">✓</span> No EFIN Required</li>
+                                <li><span class="text-success">✓</span> No experience required</li>
+                                <li><span class="text-success">✓</span> Up to 3 prior year access</li>
+                                <li><span class="text-success">✓</span> All States included</li>
+                                <li><span class="text-success">✓</span> Unlimited returns</li>
+                                <li><span class="text-success">✓</span> Customizable reports</li>
+                                <li><span class="text-success">✓</span> Tax Software training</li>
+                                <li><span class="text-success">✓</span> Unlimited users</li>
+                                <li><span class="text-success">✓</span> Tax & Tech Support 12/7</li>
+                                <hr />
+                                <p><b>We will guide you to the process</b></p>
+
+                                <li><span class="text-success">✓</span> Getting your PTIN license</li>
+                                <li><span class="text-success">✓</span> CTEC and Bond</li>
+                                <li><span class="text-success">✓</span> Bank Enrollment</li>
+                                <li><span class="text-success">✓</span> e-File Transmition</li>
+                            </ul>
+
+                        </div>
+                    </div>
+
+                    <div class="col-3 cuadro rounded" data-aos="flip-left">
+                        <div class="row blue p-2 text-center rounded-top">
+                            <div class="col-12">
+                                <p>PROFESSIONAL PACKAGE<br />(90% /10% )</p>
+                                <h2><b>$1295</b></h2>
+                            </div>
+                        </div>
+
+                        <div class="row px-3 pt-3">
+                            <b>Buy ATS Software 2020 and get 2019 FREE.</b><br /> Start Your Own Tax Preparation
+                            Business TODAY!
+                            Revenue Split 70% / 30%
+                            <br />
+                            PTIN Required
+                        </div>
+                        <div class="row p-4 text-left">
+                            <ul>
+                                <li><span class="text-success">✓</span> No EFIN Required</li>
+                                <li><span class="text-success">✓</span> No experience required</li>
+                                <li><span class="text-success">✓</span> Up to 3 prior year access</li>
+                                <li><span class="text-success">✓</span> All States included</li>
+                                <li><span class="text-success">✓</span> Unlimited returns</li>
+                                <li><span class="text-success">✓</span> Customizable reports</li>
+                                <li><span class="text-success">✓</span> Tax Software training</li>
+                                <li><span class="text-success">✓</span> Unlimited users</li>
+                                <li><span class="text-success">✓</span> Tax & Tech Support 12/7</li>
+                                <hr />
+                                <p><b>We will guide you to the process</b></p>
+
+                                <li><span class="text-success">✓</span> Getting your PTIN license</li>
+                                <li><span class="text-success">✓</span> CTEC and Bond</li>
+                                <li><span class="text-success">✓</span> Bank Enrollment</li>
+                                <li><span class="text-success">✓</span> e-File Transmition</li>
+                            </ul>
 
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="nav-partner" role="tabpanel" aria-labelledby="nav-partner-tab"
-                    tabindex="0">
-                    <div class="row m-0 p-5 text-center">
-                        <h1 class="text-center align-self-center" style="color:black">ATS Partners</h1>
-                        <p>
-                            Our Partnership Packages are designed for tax preparers who have not obtained their own
-                            EFIN. If you are new to the tax business or looking to branch off and start your own tax
-                            business this is a great package to start with. We offer 60/40, 70/30, 80/20 and 90/10
-                            splits in favor of the partner with no EFIN required. Many of our current partners are
-                            former employees of H&R Block, Jackson Hewitt, Liberty Tax, and smaller tax companies
-                            looking to start their own tax preparation business.
-                        </p>
-                    </div>
-                    <div class="row m-0 text-center justify-content-around">
-                        <div class="col-3">
-                            <div class="row">
-                                STARTER PACKAGE
-                                (70% / 30% )
-                                $495
-                            </div>
-                            <div class="row">
-                                Buy ATS Software 2020 and get 2019 FREE. Start Your Own Tax Preparation Business TODAY!
-                                Revenue Split 70% / 30%
-                                PTIN Required
-                            </div>
-                            <div class="row">
-
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <div class="row">
-                                ADVANCED PACKAGE
-                                (80% / 20% )
-                                $795
-                            </div>
-                            <div class="row">
-                                Buy ATS Software 2020 and get 2019 FREE. Start Your Own Tax Preparation Business TODAY!
-                                Revenue Split 70% / 30%
-                                PTIN Required
-                            </div>
-                            <div class="row">
-
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <div class="row">
-                                PROFESSIONAL PACKAGE
-                                (90% / 10% )
-                                $1295
-                            </div>
-                            <div class="row">
-                                Buy ATS Software 2020 and get 2019 FREE. Start Your Own Tax Preparation Business TODAY!
-                                Revenue Split 90% / 10%
-                                PTIN Required
-                            </div>
-                            <div class="row">
-
-                            </div>
-                        </div>
+                <div class="row m-0 pb-5 justify-content-center">
+                    <div class="col-5">
+                        <a href="../pages/contact.html" class="btn btn-primary btn-lg mt-5 w-100" tabindex="-1"
+                            role="button">
+                            <b>CONTACT US!</b>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -226,6 +326,7 @@
     </div>
     <script src="../data/productsInfo.js"></script>
     </div>
+
     <!-- Footer -->
     <div class="container-fluid p-0" class="footer">
         <footer class="p-5">
@@ -315,5 +416,41 @@
         align-items: center;
         justify-content: space-between;
         text-align: center;
+    }
+
+    .tab-name {
+        font-size: larger;
+    }
+
+    .nav-tabs .nav-item.show .nav-link,
+    .nav-tabs .nav-link.active {
+        color: #489cbd;
+        border-color: #489cbd;
+        border-bottom-width: 0;
+    }
+
+    .tab-content {
+        border: 1px solid #489cbd;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+        background-color: white;
+    }
+
+    .green {
+        color: white;
+        background-color: #69a343;
+        font-weight: bold;
+    }
+
+    .red {
+        color: white;
+        background-color: #ff4d00;
+        font-weight: bold;
+    }
+
+    .blue {
+        color: white;
+        background-color: #1e6fff;
+        font-weight: bold;
     }
 </style>
