--- a/pages/software.html
+++ b/pages/software.html
@@ -1,10 +1,3 @@
-<!-- 
-    AZTECA TAX WEB
-    VERSION: 1.0
-    ÚLTIMA ACTUALIZACIÓN: 14/04/2023
-    ESTADO: Terminado
--->
-
 <!DOCTYPE html>
 <html>
 
@@ -47,10 +40,10 @@
         <div class="row justify-content-center py-2">
             <div class="col-11 col-md-8">
                 <div class="row justify-content-between">
-                    <div class="col-5">
+                    <div class="col-7">
                         <p class="m-0"><strong>DOWNLOAD </strong> DEMO!</p>
                     </div>
-                    <div class="col-2 align-content-end">
+                    <div class="col-3 col-md-2 align-content-end">
                         <div class="row justify-content-between">
                             <a href="https://twitter.com/aztecataxes" target="_blank">
                                 <img src="../rsc/icons/twitter.svg" alt="twitter" />
@@ -69,9 +62,10 @@
     </div>
 
     <!-- Nav Bar -->
-    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-center" id="nav-bar">
+    <nav class="navbar bg-light navbar-expand-sm navbar-light justify-content-between justify-content-md-center"
+        id="nav-bar">
         <!-- Logo -->
-        <div id="logo" class="col-2 p-0">
+        <div id="logo" class="col-7 col-md-2 p-0">
             <a href="../index.html" class="navbar-brand">
                 <img width="100%" src="../rsc/logo/logo.png" alt="ATS Logo" />
             </a>
@@ -133,12 +127,12 @@
                         <img src="../rsc/banners_prods/ATS 1040 Desktop.jpg" class="img-fluid" width="100%" />
                     </div>
                 </div>
-                <div class="row m-0 p-3" id="content-desktop">
+                <div class="row m-0 pb-1 pb-md-3" id="content-desktop">
 
                 </div>
-                <div class="row m-0 pb-5 justify-content-center">
-                    <div class="col-5">
-                        <a href="../pages/contact.html" class="btn btn-primary btn-lg mt-5 w-100" tabindex="-1"
+                <div class="row m-0 pb-3 pb-md-5 justify-content-center">
+                    <div class="col-12 col-md-5">
+                        <a href="../pages/contact.html" class="btn btn-primary btn-lg  m-0 mt-md-5  w-100" tabindex="-1"
                             role="button">
                             <b>CONTACT US!</b>
                         </a>
@@ -151,16 +145,16 @@
                     <div class="col-12">
                         <img src="../rsc/banners_prods/ATS 1040 Online.jpg" class="img-fluid" width="100%" />
                     </div>
-                    <div class="row m-0 p-3" id="content-online">
+                </div>
+                <div class="row m-0 pb-1 pb-md-3" id="content-online">
 
-                    </div>
-                    <div class="row m-0 pb-5 justify-content-center">
-                        <div class="col-5">
-                            <a href="../pages/contact.html" class="btn btn-primary btn-lg mt-5 w-100" tabindex="-1"
-                                role="button">
-                                <b>CONTACT US!</b>
-                            </a>
-                        </div>
+                </div>
+                <div class="row m-0 pb-3 pb-md-5 justify-content-center">
+                    <div class="col-12 col-md-5">
+                        <a href="../pages/contact.html" class="btn btn-primary btn-lg  m-0 mt-md-5 w-100" tabindex="-1"
+                            role="button">
+                            <b>CONTACT US!</b>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -170,16 +164,16 @@
                     <div class="col-12">
                         <img src="../rsc/banners_prods/ATS Corporations.jpg" class="img-fluid" width="100%" />
                     </div>
-                    <div class="row m-0 p-3" id="content-corp">
+                </div>
+                <div class="row m-0 pb-1 pb-md-3" id="content-corp">
 
-                    </div>
-                    <div class="row m-0 pb-5 justify-content-center">
-                        <div class="col-5">
-                            <a href="../pages/contact.html" class="btn btn-primary btn-lg mt-5 w-100" tabindex="-1"
-                                role="button">
-                                <b>CONTACT US!</b>
-                            </a>
-                        </div>
+                </div>
+                <div class="row m-0 pb-3 pb-md-5 justify-content-center">
+                    <div class="col-12 col-md-5">
+                        <a href="../pages/contact.html" class="btn btn-primary btn-lg  m-0 mt-md-5 w-100" tabindex="-1"
+                            role="button">
+                            <b>CONTACT US!</b>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -199,7 +193,7 @@
                 </div>
                 <div class="row m-0 text-center justify-content-around">
 
-                    <div class="col-3 cuadro rounded" data-aos="flip-left">
+                    <div class="col-10 col-md-3 cuadro rounded mb-3 mb-md-0" data-aos="flip-left">
                         <div class="row green p-2 text-center rounded-top">
                             <div class="col-12">
                                 <p>STARTER PACKAGE <br />(70% / 30% )</p>
@@ -236,7 +230,7 @@
                         </div>
                     </div>
 
-                    <div class="col-3 cuadro rounded" data-aos="flip-left">
+                    <div class="col-10 col-md-3 cuadro rounded mb-3 mb-md-0" data-aos="flip-left">
                         <div class="row red p-2 text-center rounded-top">
                             <div class="col-12">
                                 <p> ADVANCED PACKAGE <br />(80% / 20% )</p>
@@ -274,7 +268,7 @@
                         </div>
                     </div>
 
-                    <div class="col-3 cuadro rounded" data-aos="flip-left">
+                    <div class="col-10 col-md-3 cuadro rounded mb-3 mb-md-0" data-aos="flip-left">
                         <div class="row blue p-2 text-center rounded-top">
                             <div class="col-12">
                                 <p>PROFESSIONAL PACKAGE<br />(90% /10% )</p>
@@ -312,10 +306,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="row m-0 pb-5 justify-content-center">
-                    <div class="col-5">
-                        <a href="../pages/contact.html" class="btn btn-primary btn-lg mt-5 w-100" tabindex="-1"
-                            role="button">
+                <div class="row m-0 pb-3 pb-md-5 justify-content-center">
+                    <div class="col-12 col-md-5">
+                        <a href="../pages/contact.html" class="btn btn-primary btn-lg  m-0 mt-md-5  mt-5 w-100"
+                            tabindex="-1" role="button">
                             <b>CONTACT US!</b>
                         </a>
                     </div>
