--- a/index.html
+++ b/index.html
@@ -108,12 +108,14 @@
                     <h1>The solution of your <span class="orange">tax business</span></h1>
                     <h2 class="text-center text-white">Access Your 2023 ATS Tax Software Today</h2>
                 </div>
-                <div class="carousel-item p-5 justify-content-center" id="it2">
-                    <h2 class="text-center text-white font-weight-bold"><span class="orange">Be part of a
-                        </span>friendly, knowledgeable,
-                        depedable, diverse and
-                        responsive<span class="orange"> team</span>
-                    </h2>
+                <div class="carousel-item p-5 active" id="it2">
+                    <div class="w-75 m-auto align-self-center">
+                        <h2 class="text-center text-white font-weight-bold"><span class="orange">Be part of a
+                            </span>friendly, knowledgeable,
+                            depedable, diverse and
+                            responsive<span class="orange"> team</span>
+                        </h2>
+                    </div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -144,6 +146,7 @@
             <div class="col-8 col-md-8 contenido">
                 <h2 class="mb-md-4" id="titulo-b3"></h2>
                 <div id="cont-b3" class="d-none d-md-flex flex-column"></div>
+
             </div>
         </div>
 
