--- a/index.html
+++ b/index.html
@@ -134,19 +134,21 @@
             <div class="col-8 col-md-6 contenido">
                 <h2 class="mb-md-4" id="titulo-b1"></h2>
                 <div id="cont-b1" class="d-none d-md-flex flex-column"></div>
+                <button class="btn btn-primary btn-xs d-md-none">ATS Software</button>
             </div>
         </div>
         <div class="row p-4 pr-5 p-md-5 m-0" id="banner2" data-aos="fade-right">
             <div class="col-8 col-md-6 contenido">
                 <h2 class="mb-md-4" id="titulo-b2"></h2>
                 <div id="cont-b2" class="d-none  d-md-flex flex-column"></div>
+                <button class="btn btn-primary btn-xs d-md-none">ATS Training</button>
             </div>
         </div>
         <div class="row p-4 pr-5 p-md-5 m-0" id="banner3" data-aos="fade-right">
             <div class="col-8 col-md-8 contenido">
                 <h2 class="mb-md-4" id="titulo-b3"></h2>
                 <div id="cont-b3" class="d-none d-md-flex flex-column"></div>
-
+                <button class="btn btn-primary btn-xs d-md-none">Auditions Solutions</button>
             </div>
         </div>
 
