--- a/pages/contact.html
+++ b/pages/contact.html
@@ -93,7 +93,7 @@
     <script>AOS.init();</script>
 
     <!-- Contenedor principal-->
-    <div class="container-fluid p-0 mt-md-5" data-aos="fade-down">
+    <div class="container-fluid p-0" data-aos="fade-down">
         <div class="row content m-0">
             <div class="col-12 col-md-6 p-5">
                 <h2><b>Contact us!</b></h2>
